--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <!-- Stats Dashboard -->
+    <!-- Estadísticas Principales -->
     <section class="dashboard">
         <div class="stat-card">
             <div class="stat-icon">📡</div>
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    <!-- Sensors Grid -->
+    <!-- Seccion Sensores -->
     <section class="sensors-section">
         <div class="section-header">
             <h2>📡 Sensores del Sistema</h2>
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <!-- Events Section -->
+    <!-- Seccion Eventos -->
     <section class="events-section">
         <div class="section-header">
             <h2>📋 Eventos Recientes</h2>
@@ -119,7 +119,7 @@
         </div>
     </section>
 
-    <!-- Test Sensors Section -->
+    <!-- Test Section -->
     <section class="test-section">
         <div class="section-header">
             <h2>Simular Eventos</h2>
@@ -177,7 +177,7 @@
     </footer>
 </div>
 
-<!-- Notification Container -->
+<!-- Notificacion Container -->
 <div id="notifications"></div>
 
 <script src="app.js"></script>
